--- a/lifebox/lib/l10n/app_en.arb
+++ b/lifebox/lib/l10n/app_en.arb
@@ -11,6 +11,9 @@
   "cache_subtitle": "Keep 7 days / 30 days / Forever (TODO)",
   "clear_data_title": "Clear Data",
   "clear_data_subtitle": "Clear local / clear cloud (API reserved)",
+  "clear_QA": "Confirm clearing?",
+  "clear_content": "This will clear locally cached data (sample placeholder).",
+  "clear_OK": "Clear",
   "logout_title": "Log out",
   "logout_QA": "Are you sure you want to log out?",
   "logout_OK": "Log out",
@@ -29,6 +32,7 @@
   "common_password": "Password",
   "common_password_hit": "Please enter your password",
   "common_or": "or",
+  "type_label": "Type",
   "version_text": "Life Inbox • v0.1.0 (MVP)",
   "login_title":"Welcome back",
   "login_subtitle":"Sign in to import screenshots, automatically detect tasks and risks, and protect your privacy with an app lock.",
@@ -48,5 +52,68 @@
   "register_back_to_login": "Back to sign in",
   "register_hint_success": "After signing up, you'll be taken to your inbox automatically.",
   "register_error_email_invalid": "Please enter a valid email address",
-  "register_error_password_too_short": "Password must be at least 8 characters"
+  "register_error_password_too_short": "Password must be at least 8 characters",
+  "all_Time":"Any time",
+  "import_title": "Import",
+  "import_title_full": "Import (Filters + Queue)",
+  "import_perm_title": "Photo permission not granted",
+  "import_perm_subtitle_ios": "Go to iOS Settings → Privacy & Security → Photos and allow access.",
+  "import_perm_retry": "Request permission again",
+  "import_action_refresh": "Refresh",
+  "import_range_unlimited": "Any time",
+  "import_filter_range_label": "Date range",
+  "import_filter_clear_range": "Clear range",
+  "import_screenshots_not_found": "No “Screenshots” album detected. Screenshot filtering will fall back to all photos.",
+  "import_screenshots_album_prefix": "Screenshots album:  {count}",
+  "import_selected_count": "{count} selected",
+  "import_select_all_visible": "Select all (visible)",
+  "import_clear_selection": "Clear selection",
+  "import_queue_label": "Queue {count}",
+  "import_empty_title": "No photos match your filters",
+  "import_empty_subtitle": "Try changing the date range or type filter.",
+  "import_loading_more": "Loading…",
+  "import_enqueue_button": "Add to processing queue",
+  "import_enqueue_button_with_count": "Add to processing queue ({count})",
+  "ocr_queue_title": "OCR Queue",
+  "ocr_queue_clear": "Clear queue",
+  "ocr_results_button": "Results ({count})",
+  "ocr_processing_prefix": "Processing: ",
+  "ocr_no_current": "No task is currently running",
+  "ocr_queued_prefix": "Queued: {count}",
+  "ocr_queue_empty": "Queue is empty",
+
+  "ocrResultsTitle": "OCR Results ({count})",
+  "@ocrResultsTitle": {
+    "description": "Title of OCR results page with count",
+    "placeholders": {
+      "count": { "type": "int" }
+    }
+  },
+
+  "selectAll": "Select all",
+  "clearSelection": "Clear",
+  "clearResultsTooltip": "Clear results",
+
+  "confirmButtonPleaseSelect": "Please select a card",
+  "confirmButtonSelectedCount": "Confirm ({count})",
+  "@confirmButtonSelectedCount": {
+    "description": "Confirm button label with selected count",
+    "placeholders": {
+      "count": { "type": "int" }
+    }
+  },
+
+  "emptyOcrResults": "No OCR results yet",
+
+  "ocrStatusSuccess": "Success",
+  "ocrStatusFailed": "Failed",
+  "ocrStatusRunning": "Processing",
+  "ocrStatusQueued": "Queued",
+
+  "ocrFailedDefaultError": "Recognition failed",
+  "noTextPlaceholder": "(No text)",
+
+  "ocrFullTextTitle": "Full OCR Text",
+  "close": "Close",
+  "viewFullText": "View full text"
 }
