--- a/lifebox/lib/l10n/app_ja.arb
+++ b/lifebox/lib/l10n/app_ja.arb
@@ -32,6 +32,7 @@
   "common_password": "パスワード",
   "common_or": "または",
   "common_password_hit": "パスワードを入力してください",
+  "type_label": "種類",
   "version_text": "Life Inbox • v0.1.0 (MVP)",
   "login_title":"おかえりなさい",
   "login_subtitle":"ログインすると、スクリーンショットを取り込み、タスクやリスクを自動で検出し、アプリロックでプライバシーを保護できます。",
@@ -51,5 +52,69 @@
   "register_back_to_login": "ログインに戻る",
   "register_hint_success": "登録が完了すると自動的に受信箱へ移動します。",
   "register_error_email_invalid": "正しいメールアドレスを入力してください",
-  "register_error_password_too_short": "パスワードは8文字以上にしてください"
+  "register_error_password_too_short": "パスワードは8文字以上にしてください",
+  "all_Time":"期間指定なし",
+  "import_title": "取り込み",
+  "import_title_full": "取り込み（絞り込み + キュー）",
+  "import_perm_title": "写真へのアクセス権がありません",
+  "import_perm_subtitle_ios": "iOS の「設定 → プライバシーとセキュリティ → 写真」からアクセスを許可してください。",
+  "import_perm_retry": "権限を再リクエスト",
+  "import_action_refresh": "更新",
+  "import_range_unlimited": "期間指定なし",
+  "type_label": "種類",
+  "import_filter_range_label": "期間",
+  "import_filter_clear_range": "期間をクリア",
+  "import_screenshots_not_found": "「スクリーンショット」アルバムが見つかりません。スクリーンショット絞り込みは全ての写真に切り替わります。",
+  "import_screenshots_album_prefix": "スクリーンショット： {count}",
+  "import_selected_count": "{count} 件選択中",
+  "import_select_all_visible": "表示中を全選択",
+  "import_clear_selection": "選択解除",
+  "import_queue_label": "キュー {count}",
+  "import_empty_title": "条件に一致する写真がありません",
+  "import_empty_subtitle": "期間や種類の条件を変更してみてください。",
+  "import_loading_more": "読み込み中…",
+  "import_enqueue_button": "処理キューに追加",
+  "import_enqueue_button_with_count": "処理キューに追加（{count}）",
+  "ocr_queue_title": "OCR キュー",
+  "ocr_queue_clear": "キューを空にする",
+  "ocr_results_button": "結果（{count}）",
+  "ocr_processing_prefix": "処理中：{count}",
+  "ocr_no_current": "実行中のタスクはありません",
+  "ocr_queued_prefix": "待機：",
+  "ocr_queue_empty": "待機中なし",
+
+  "ocrResultsTitle": "OCR結果（{count}）",
+  "@ocrResultsTitle": {
+    "description": "Title of OCR results page with count",
+    "placeholders": {
+      "count": { "type": "int" }
+    }
+  },
+
+  "selectAll": "全選択",
+  "clearSelection": "クリア",
+  "clearResultsTooltip": "結果をクリア",
+
+  "confirmButtonPleaseSelect": "カードを選択してください",
+  "confirmButtonSelectedCount": "確定（{count}）",
+  "@confirmButtonSelectedCount": {
+    "description": "Confirm button label with selected count",
+    "placeholders": {
+      "count": { "type": "int" }
+    }
+  },
+
+  "emptyOcrResults": "OCR結果がありません",
+
+  "ocrStatusSuccess": "成功",
+  "ocrStatusFailed": "失敗",
+  "ocrStatusRunning": "処理中",
+  "ocrStatusQueued": "待機中",
+
+  "ocrFailedDefaultError": "認識に失敗しました",
+  "noTextPlaceholder": "（テキストなし）",
+
+  "ocrFullTextTitle": "OCR全文",
+  "close": "閉じる",
+  "viewFullText": "全文を見る"
 }
