--- a/lifebox/lib/l10n/app_ja.arb
+++ b/lifebox/lib/l10n/app_ja.arb
@@ -18,6 +18,7 @@
   "logout_QA": "現在のアカウントからログアウトしますか？",
   "logout_OK": "ログアウト",
   "not_logged_in": "未ログイン",
+  "no_name": "ユーザー {name}",
   "common_Cancel": "キャンセル",
   "version_text": "Life Inbox • v0.1.0 (MVP)",
   "app_name": "Life Inbox",
@@ -39,7 +40,9 @@
   "login_logining":"ログイン中...",
   "login_with_mail":"メールでログイン",
   "login_with_google":"Googleでログイン（仮）",
-  "login_to_register":"アカウントをお持ちでない方はこちら",
+  "login_continue_google":"Continue with Google",
+  "login_no_account":"アカウントをお持ちでない方は",
+  "login_to_register":"新規",
   "login_hit":"ヒント：ログイン後、設定からアプリロック（Face ID／指紋／システム認証）を有効にできます。",
   "register_title": "アカウント作成",
   "register_subtitle": "メールで登録します。後から Google/Apple の連携ができ、アプリロックを有効にして安全性を高められます。",
@@ -312,5 +315,14 @@
   "conflict":"このメールアドレスは既に登録されています",
   "validationError":"入力内容を確認してください（メール形式など）",
   "serverError":"サーバーエラーが発生しました。しばらくしてから再試行してください",
-  "unknown":"不明なエラーが発生しました"
+  "unknown":"不明なエラーが発生しました",
+
+  "cloud_paywall_title": "クラウド保存（有料）",
+  "cloud_paywall_desc": "クラウド保存を利用するには Pro プランへの登録が必要です（Mock）。",
+  "cloud_feature_backup": "サーバー上のデータベースに保存",
+  "cloud_feature_sync": "複数端末で同期（今後対応）",
+  "cloud_feature_offline": "オフラインでも利用可能",
+  "cloud_price_monthly": "料金：月額 ¥300（Mock）",
+  "subscription_restore": "購入を復元",
+  "subscription_subscribe": "登録して有効化"
 }
